add contact footer experiences and fix sidebar

--- a/src/colors.css
+++ b/src/colors.css
@@ -3,6 +3,7 @@
   --color-accent: #ff7f32;
   --color-bg: #fff;
   --color-bg-secondary: #f5f7fa;
+  --color-bg-tertiary: #0B1F40;
   --color-text: #222;
   --color-success: #3bb273;
   --color-black: #000000;
